# agent_builder_application

./: .env  .env.production  .gitattributes  .gitignore  .npmrc  35-errors-5files.md  ACTION-ITEMS.md  AMPLIFY_DEPLOYMENT.md  AWS-README.md  AWS-SETUP-SUMMARY.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_SETUP.md  COMPLETE-SETUP-GUIDE.md  CONVEX_FILES_ANALYSIS.md  CORRECTED-REVIEW.md  COST_OPTIMIZATION.md  CROSS-ACCOUNT-SETUP-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  DEPLOY_NOW.md  Dockerfile.assistant  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PRE-COMMIT-CHECKLIST.md  QUICK_DEPLOY.md  README.md  REVIEW-FINDINGS.md  SECURITY_GITIGNORE_UPDATE.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  SETUP-GUIDE.md  SIMPLE-SETUP.md  Security_checkup.py  TASK_7_IMPLEMENTATION.md  WARP.md  agent_builder_infrastructure  amplify.yml  eslint.config.js  generate_infrastructure_diagram.py  (+14 more)
assistant/: main.py
cloudformation/: README.md  mcp-agentcore-server.yaml  user-cross-account-role.yaml  user-onboarding-template.yaml
convex/: agentAsToolGenerator.ts  agentBuilderPrompts.ts  agentBuilderWorkflow.ts  agentCapabilities.ts  agentCodeGeneration.test.ts  agentCoreTester.ts  agentExecution.test.ts  agentImprovement.ts  agentSkills.test.ts  agentTemplates.ts  agentValidation.ts  agentcoreDeployment.ts  agentcoreMCP.ts  agentcoreSetup.ts  agentcoreTestExecution.ts  agents.ts  apiKeys.ts  auditLogs.ts  auth.config.ts  auth.ts  authDebug.ts  authErrorHandler.ts  automatedAgentBuilder.ts  awsAuth.ts  awsCrossAccount.ts  awsDeployment.ts  awsDeploymentFlow.ts  awsDeploymentSetup.ts  awsDiagramGenerator.ts  awsFederatedIdentity.ts  cdkGenerator.ts  cloudFormationGenerator.ts  codeGenerator.ts  cognitoAuth.ts  constants.ts  containerOrchestrator.ts  conversationAnalysis.ts  conversations.ts  convex.config.ts  crons.ts  (+67 more)
docs/: 3-tier-architecture-guide.md  aws-setup.md  (+23 more)
python/mcp-document-fetcher/: pyproject.toml
python/mcp-document-fetcher/src/mcp_document_fetcher/: __init__.py  server.py
(+135 files in other folders)
