[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-document-fetcher"
version = "0.1.0"
description = "MCP server for fetching and cleaning web documentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Agent Builder", email = "dev@agentbuilder.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-document-fetcher = "mcp_document_fetcher.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-document-fetcher"
Repository = "https://github.com/yourusername/mcp-document-fetcher"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_document_fetcher"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
